--- a/others/量化的意义.md
+++ b/others/量化的意义.md
@@ -29,3 +29,12 @@
 
 然后用这些指标去套计算公式，来反映每个同学的产出效率和代码质量。
 这些指标不一定能真实反映每个人的情况，但从纵观全局，这些指标还是相对公平的。如果不去量化，很多事情都没有一个度量的标准，团队就容易变得不公平。
+
+## 重构的意义
+2022年我推动了一波前端重构。这个过程做的不好的一点是没有量化，有些重构项没有去仔细思考它的收益和风险、成本。
+大家在讨论该不该做某个重构项和排优先级的时候缺少标准。
+其实可以给个粗估，尽管不准确，但起码有个可以参考和比较的指标，这样重构工作会变得更加合理、科学。
+
+## 我和老爸说电动牙刷比手动牙刷清理效果高很多
+“很多”其实不能清晰地描述高多少，我应该说电动牙刷比手动牙刷清理效果大概高十倍。
+
