--- a/others/量化的意义.md
+++ b/others/量化的意义.md
@@ -35,6 +35,6 @@
 大家在讨论该不该做某个重构项和排优先级的时候缺少标准。
 其实可以给个粗估，尽管不准确，但起码有个可以参考和比较的指标，这样重构工作会变得更加合理、科学。
 
-## 我和老爸说电动牙刷比手动牙刷清理效果高很多
-“很多”其实不能清晰地描述高多少，我应该说电动牙刷比手动牙刷清理效果大概高十倍。
+## 推销电动牙刷
+为了老爸的牙齿健康，我建议老爸用电动牙刷，为了说服它，我说电动牙刷比手动牙刷清理效果高很多。但“很多”其实不能清晰地描述高多少，说服力不强。我应该说电动牙刷比手动牙刷清理效果大概高十倍，这样更清晰明了，沟通效率更高效
 
